All rights reserved.

1.1.5
-----
General
* Taylor C. Richberger taywee@gmx.com has begun enhancing Ublu code and fixing
various shortfalls, e..g, see his work on the calljava and dpoint commands.

System
* default tuples
	* @true
	* @false
* interpreter
	* allow quoted strings as function arguments
	* allow blocks as function arguments

Commands
* general
	* more cleanup
* individual commands
	* calljava
		* properly deals with interfaces
	* db
		* -columnnames
		* bug: -bytes
	* dpoint
		* WARNING status now has message
		* dpoint allows a crit and warn alert comparator to work without value 
	* file
	    * -createdds
	    * -createfmt
	    * -writeall
	    * -commitstart
	    * -commit
	    * -rollback
	    * -commitend
		* change -pos BF to B
	* gensh
		* -strictPosix
		* gensh was generating bad documentary headers when passed plainwords.
    * record
    	* -create
    	* -getcontents
    	* -getfield[byname]
    	* -getfields
    	* -setcontents works more correctly
    * rs
        * -fileblob
        * -getblob
        * -lgetblob
        * -tofile
        * more destinations for blobs
    * tuple
    	* account for the variety of as400 classes
    	* -autonomic

Extensions
* general
	* some cleanup
* new
	* sysshep.qsys2.system_status.ublu
	* sysshep.qsys2.memory_pool.ublu
	* ux.msg.ublu
* updated
	* sysshep.qsys2.sysdiskstat.ublu
		* changed format
		
Examples
* fileAllBlobs.ublu

1.1.4 2016-11-04
-----
System
*   Debugger now handles autonomic variables

Commands
* general
	* minor fixes at Java level
	* major fixes to rs and db
* individual commands
    * num -bin
	* outq and printer rationalized
		* outq -get -getint -getfloat -getstring
		* outq removed superflous dash-commands
		* printer -getint -getfloat -getstring
	* rs & ftp bug in close deleting tuple fixed
	* rs
		* -bytes added
		* -close?? dash-commands  no longer delete tuple
		* -get -lget
		* -abs -rel -next
	* savesys
	
Extensions
* new
	* ux.printobj.ublu
	* sysshep directory
	